--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,3 +132,11 @@ footer {
     }
     
 }
+
+/* Media query: tablets and larger (>922) */
+@media screen and (min-width: 922px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+     }
+    
+}
