--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,10 +84,16 @@ nav {
 
 /* Main */
 main {
-    background-color: lightblue;
     /* Make main element take up any excess space */
     flex: 1 0 auto;
     margin-top: 47px;
+}
+
+/* Hero */
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center /cover;
 }
 
 /* Footer */
