--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ h3 {
 }
 
 .hidden-heading {
-    display:none;
+    display: none;
 }
 
 /* Header */
@@ -173,9 +173,9 @@ main {
 
 #times div {
     color: #fafafa;
-    background-color: rgba( 0, 0, 0, .6);
+    background-color: rgba(0, 0, 0, .6);
     padding: 15px;
-    text-align:center;
+    text-align: center;
     /* This will not wrap on screens of less than 400px wide.
     Each div will expand to fill the available space on it's row */
     flex-basis: 200px;
@@ -213,6 +213,15 @@ main {
     padding: 5%;
     color: #3a3a3a;
 }
+
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
@@ -274,6 +283,11 @@ main {
         align-self: flex-end;
     }
 
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
+
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -283,14 +297,15 @@ main {
     }
 }
 
-@media screen and (min-width: 1200px) {    
+@media screen and (min-width: 1200px) {
+
     /* Reasons section */
     #benefits {
         display: flex;
         flex-direction: row;
     }
 
-    #benefits > div {
+    #benefits>div {
         flex: 1;
     }
 
@@ -302,11 +317,16 @@ main {
         order: 1;
     }
 
-    #benefits-mental > div {
+    #benefits-mental>div {
         align-self: flex-start;
     }
 
-    #benefits-physical > div {
+    #benefits-physical>div {
         align-self: flex-end;
+    }
+
+    /* Gallery */
+    #photos {
+        column-count: 4;
     }
 }
